# takehome-test

./: README.md  pyproject.toml
src/takehome/: inventory.py  loyal_customers.py  remove_duplicates.py  two_sum.py
tests/: test_inventory.py  test_loyal_customers.py  test_remove_duplicates.py  test_two_sum.py
