[project]
name = "takehome"
version = "0.1.0"
description = "takehome"
readme = "README.md"
authors = []
requires-python = ">=3.12"
dependencies = []

# [project.scripts]
# takehome = "takehome:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.4.2", "pytest-cov>=7.0.0"]
